# mysql-proxy-python

./: AUTHORS  ChangeLog  Makefile.am  ProjectHome.md  THANKS  a_simple_example.md  basic_usage.md  configure.in  installation_guide.md  plugin_interface.md  wiki_index.md
examples/: basic.py  constants.py  inject.py  keepalive.py  monitor.py  packets.py  query_time.py  resultset.py  rewrite.py  routing.py  scramble.py  states.py  tokenize.py  tokenize_query.py  union.py  warnings.py
lib/: Makefile.am  admin_sql.py  chassis.c  glib2.c  object.c  object.h  proxy_utils.py  rw_splitting.py  setup_lib.py  setup_lib_mysql.py  xtab.py
lib/mysql/: Makefile.am  password.c  proto.c  sql-tokenizer-keywords.c  sql-tokenizer-keywords.h  sql-tokenizer-python.c  sql-tokenizer-tokens.c  sql-tokenizer.c  sql-tokenizer.h
lib/proxy/: Makefile.am  auto_config.py  balance.py  commands.py  parser.py  tokenizer.py
src/: Makefile.am  network-mysqld-python.c  network-mysqld-python.h  pyproxy-plugin.c  pyproxy-plugin.h  pytypes.c  pytypes.h
tests/: Makefile.am  run-tests.lua
tests/suite/r/: bug_35669.result  change_user.result  client_address.reject  constants.reject  failover.result  lineno.reject  lineno.result  mysql-40.reject  overlong.reject  pooling.reject  raw_packets.reject  raw_packets.result  resultset.reject  select_affected_rows.result  select_null.reject  tokens-normalize.reject  tokens1.reject  tokens2.reject  xtab1.reject  xtab2.result
tests/suite/t/: bug_30867.options  bug_30867.py  bug_30867.test  bug_35729-mock.py  bug_35729-test.py  bug_35729.options  bug_35729.test  bug_41991-mock.py  bug_41991-test.py  bug_41991.options  bug_41991.test  bug_43078-mock.py  bug_43078-test.py  bug_43078.options  bug_43078.test  bug_45167-mock.py  bug_45167-test.py  bug_45167.options  bug_45167.test  bug_46141-mock.py  bug_46141-test.py  bug_46141.options  bug_46141.test  chain1.options  chain1.test  chain1a.py  chain1b.py  change_user.options  change_user.py  change_user.test  client_address-mock.py  client_address-test.py  client_address.options  client_address.test  client_address_socket.options  client_address_socket.py  constants-mock.py  constants-test.py  constants.options  constants.test  (+43 more)
